fix: class path for windows platform